# ChangeLog for dev-lisp/cl-tbnl
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lisp/cl-tbnl/Attic/ChangeLog,v 1.5 2005/03/19 21:20:44 mkennedy Exp $

*cl-tbnl-0.5.1 (19 Mar 2005)

  19 Mar 2005; Matthew Kennedy <mkennedy@gentoo.org> +cl-tbnl-0.5.1.ebuild:
  New upstream version.

*cl-tbnl-0.4.1 (16 Mar 2005)

  16 Mar 2005; Matthew Kennedy <mkennedy@gentoo.org> +cl-tbnl-0.4.1.ebuild:
  New upstream version.

*cl-tbnl-0.3.12 (12 Mar 2005)

  12 Mar 2005; Matthew Kennedy <mkennedy@gentoo.org> +cl-tbnl-0.3.12.ebuild,
  +cl-tbnl-0.3.13.ebuild:
  New upstream version.

*cl-tbnl-0.3.12 (01 Mar 2005)

  01 Mar 2005; Matthew Kennedy <mkennedy@gentoo.org> +cl-tbnl-0.3.12.ebuild:
  New upstream version.

*cl-tbnl-0.3.11 (21 Feb 2005)

  21 Feb 2005; Matthew Kennedy <mkennedy@gentoo.org> metadata.xml,
  +cl-tbnl-0.3.11.ebuild:
  New upstream version; Expanded metadata.xml

*cl-tbnl-0.2.12 (18 Oct 2004)

  18 Oct 2004; <mkennedy@gentoo.org> +metadata.xml, +cl-tbnl-0.2.12.ebuild:
  Initial port.  Ebuild contributed by Matthew Kennedy <mkennedy@gentoo.org>
