@@ -7,6 +7,7 @@ MD5 0d1f4e17c59a3b0325807341d6efc04d cl-tbnl-0.3.12.ebuild 923
 MD5 959fd151be631d3deb7c78f314d1cae9 cl-tbnl-0.3.13.ebuild 923
 MD5 93d2851f8c41f2d64497dc6f80fe00bf cl-tbnl-0.4.1.ebuild 922
 MD5 10735e96e910915989ba829b8c996ab5 cl-tbnl-0.5.1.ebuild 922
+MD5 10735e96e910915989ba829b8c996ab5 cl-tbnl-0.5.2.ebuild 922
 MD5 8bc422e5dac6886c3c688ffd6ed93dd6 files/digest-cl-tbnl-0.2.12 62
 MD5 96bbbd53007caa5cc06cc59bcb68c1ff files/digest-cl-tbnl-0.3.10 62
 MD5 a85a52d1daff75e4574ebd35622844f5 files/digest-cl-tbnl-0.3.11 67
@@ -14,3 +15,4 @@ MD5 5764ebffe3c1d612b13d29a2494df2eb files/digest-cl-tbnl-0.3.12 67
 MD5 e5ef74a2e8ed899318b177f8a554db55 files/digest-cl-tbnl-0.3.13 67
 MD5 650b3eb0a9f443c6bcd6b083cdb71a49 files/digest-cl-tbnl-0.4.1 66
 MD5 338294c378c9cfa6c701c7e004c39476 files/digest-cl-tbnl-0.5.1 66
+MD5 e91bbe8a494a0fa85f3f86313792b3a8 files/digest-cl-tbnl-0.5.2 66
