@@ -1,6 +1,11 @@
 # ChangeLog for dev-lisp/cl-tbnl
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lisp/cl-tbnl/Attic/ChangeLog,v 1.5 2005/03/19 21:20:44 mkennedy Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lisp/cl-tbnl/Attic/ChangeLog,v 1.6 2005/03/26 23:21:42 mkennedy Exp $
+
+*cl-tbnl-0.5.2 (26 Mar 2005)
+
+  26 Mar 2005; Matthew Kennedy <mkennedy@gentoo.org> +cl-tbnl-0.5.2.ebuild:
+  New upstream version.
 
 *cl-tbnl-0.5.1 (19 Mar 2005)
 
